<resources>
    <string name="app_name" translatable="false">9tique</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_seller_products" translatable="false">Seller Products</string>
    <string name="action_zzim_products" translatable="false">Zzim Products</string>
    <string name="action_seller_information_modify" translatable="false">Seller Information Modify</string>
    <string name="action_complete" translatable="false">완료</string>

    <string name="error_message_for_service_unavailable" translatable="false">서비스 연결상태가 좋지 않습니다.\n\n잠시 후 다시 시도해 주세요.</string>

    <!--seller info-->
    <string name="seller_info_seller_name_title" translatable="false">판매자 이름</string>
    <string name="seller_info_shop_name_title" translatable="false">매장명</string>
    <string name="seller_info_shop_info_title" translatable="false">매장 정보</string>
    <string name="seller_info_shop_phone_title" translatable="false">연락처</string>
    <string name="seller_info_seller_name_hint" translatable="false">판매자 성함을 입력해주세요</string>
    <string name="seller_info_shop_name_hint" translatable="false">등록하시는 매장명을 입력해주세요</string>
    <string name="seller_info_shop_info_hint" translatable="false">매장에 대한 정보를 입력해 주세요</string>
    <string name="seller_info_shop_phone_hint" translatable="false">상품 문의가 가능한 연락처를 남겨 주세요</string>
    
    <string name="kakao_app_key" translatable="false">147fb0c64769cb137db3f722e36d3e9b</string>
    <string name="facebook_app_id" translatable="false">1845329159075366</string>
    <string name="toolbar_title_home">HOME</string>
    <string name="toolbar_title_contents">CONTENTS</string>
    <string name="toolbar_title_shop">SHOP</string>


    <!-- renewal -->
    <string name="home">홈</string>
    <string name="store_list">매장 리스트</string>
    <string name="brand">브랜드</string>
    <string name="wish_list">찜리스트</string>
    <string name="search">검색</string>
    <string name="setting">설정</string>
    <string name="login_logout">로그인/로그아웃</string>
    <string name="regist_seller">판매자 등록</string>
    <string name="ask_info">문의하기</string>
    <string name="top_category">상위 카테고리</string>
    <string name="sub_category">하위 카테고리</string>
    <string name="sort_lastest">최신순</string>
    <string name="sort_popularity">인기순</string>
    <string name="sort_low_price">낮은가격순</string>
    <string name="sort_high_price">높은가격순</string>

    <string name="title_all">ALL</string>
    <string name="title_top">TOP</string>
    <string name="title_outer">OUTER</string>
    <string name="title_onepiece">ONEPIECE</string>
    <string name="title_bottom">BOTTOM</string>
    <string name="title_headwear">HEADWEAR</string>
    <string name="title_shoes">SHOES</string>
    <string name="title_comment">댓글</string>

</resources>