<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/seller_info_seller_name_title"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_seller_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_add_edit_product_edittext"
            android:hint="@string/seller_info_seller_name_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/seller_info_shop_name_title"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_add_edit_product_edittext"
            android:hint="@string/seller_info_shop_name_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/seller_info_shop_info_title"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_shop_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_add_edit_product_edittext"
            android:hint="@string/seller_info_shop_info_hint"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/seller_info_shop_phone_title"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_shop_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_add_edit_product_edittext"
            android:hint="@string/seller_info_shop_phone_hint"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>