<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11.3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/top_category"
                    android:textColor="@color/black"
                    android:textSize="10.3sp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sub_category"
                    android:textColor="@color/black"
                    android:textSize="10.3sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14.7dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="44.7dp"
                    android:text="@string/sort_lastest"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="10.3sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35.3dp"
                    android:text="@string/sort_popularity"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="10.3sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25.7dp"
                    android:text="@string/sort_low_price"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="10.3sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_high_price"
                    android:textColor="@drawable/text_color_selector"
                    android:textSize="10.3sp"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_product_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                app:spanCount="2"
                android:layout_marginTop="12dp"/>


        </LinearLayout>
    </FrameLayout>
</layout>