<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools"
                                   android:id="@+id/toolbar"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:background="?attr/colorPrimary"
                                   android:minHeight="?attr/actionBarSize"
                                   app:contentInsetEnd="0dp"
                                   app:contentInsetStart="0dp"
                                   app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                                   app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <TextView
        android:id="@+id/tv_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/toolbar_title_home"
                android:textColor="@color/white"
                tools:text="HOME"
                tools:textColor="#ffffff"/>

            <TextView
                android:id="@+id/tv_contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/toolbar_title_contents"
                android:textColor="@color/white"
                tools:text="CONTENTS"
                tools:textColor="#ffffff"/>

            <TextView
                android:id="@+id/tv_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/toolbar_title_shop"
                android:textColor="@color/white"
                tools:text="SHOP"
                tools:textColor="#ffffff"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_drawer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:background="@color/white"
            tools:background="#ffffff"/>

    </FrameLayout>

</android.support.v7.widget.Toolbar>